# thesis

./: README.md  create_webpanel_superuser.sh  docker-compose-db.yml  docker-compose-services.yml  run-db.sh  run-docker.sh
services/: generate-pb.sh
services/ardea/: Dockerfile  config-dev.json  config-docker.json  go.mod  go.sum
services/ardea/cmd/: main.go
services/ardea/migrations/: 000001_init.up.sql  000002_model_name.down.sql  000002_model_name.up.sql  000003_model_type_and_error.down.sql  000003_model_type_and_error.up.sql  000004_mutiple_io.down.sql  000004_mutiple_io.up.sql
services/arietes/: Dockerfile
services/arietes/app/: builder.py  config.py  entrypoint.sh  errors.py  main.py  requirements.txt
services/bubo/: Dockerfile  fluent.conf
services/django/: Dockerfile  Dockerfile.dev  requirements.txt
services/django/ardea_pb/: ardea_pb2.py  ardea_pb2_grpc.py
services/frontend/: Dockerfile  Dockerfile.dev  config-overrides.js  package.json
services/frontend/src/: index.js  (+2 more)
services/gorilla/: Dockerfile  config-dev.json  config-docker.json  entrypoint.sh  go.mod  go.sum
services/hippo/: Dockerfile  config-dev.json  config-docker.json  go.mod  go.sum
services/ibis/: config-dev.json  config-docker.json  go.mod
services/lynx/: Dockerfile  config-dev.json  config-docker.json  entrypoint.sh  go.mod  go.sum
services/nalogi/: Dockerfile  entrypoint.sh  requirements.txt
services/ovis/: Dockerfile
services/prometheus/: Dockerfile  entrypoint.sh  prometheus.yml
services/proto/: ardea.proto  gorilla.proto  hippo.proto  ibis.proto  picus.proto  rhino.proto  selachii.proto  slav.proto  tesseract.proto
services/rhino/: Dockerfile  config-dev.json  config-docker.json  go.mod  go.sum
services/selachii/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  build.sh
services/selachii/base-image/: Dockerfile
services/selachii/src/: main.cpp
services/selachii/src/controller/: controller.cpp  controller.h
services/selachii/src/model_loader/: loader.cpp  loader.h
services/selachii/src/model_store/: store.cpp  store.h
services/selachii/src/models/: errors.h  models.cpp  models.h  tensors.cpp  tensors.h
services/selachii/src/proto/: selachii.grpc.pb.cc  selachii.grpc.pb.h  selachii.pb.cc  selachii.pb.h
services/selachii/src/service/: serialization.cpp  serialization.h  service.cpp  service.h
services/selachii/src/util/: uuid.cpp  uuid.h
services/tesseract/: Dockerfile  entrypoint.sh  go.mod  go.sum  main.go  service.yaml
(+321 files in other folders)
